# devcontextmemo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  architecture.yaml  index.html  knowledge-state-machine.yaml  pyproject.toml  service-card.schema.yaml
docs/: devContextMemo-MCP-Tool接口-行业调研与详细设计-V1.1.md  devContextMemo-Python项目结构-调研报告-V1.0.md  devContextMemo-SQLite-Schema-详细设计-V1.1.md  devContextMemo-使用手册-V1.0.md  devContextMemo-修剪规则-完整设计-V1.0.md  devContextMemo-决策总账-V1.0.md  devContextMemo-原子写入与路径校验-设计-V1.0.md  devContextMemo-数据写入流水线-详细设计-V1.0.md  devContextMemo-晋升生命周期-设计-V2.0.md  devContextMemo-测试方案-V1.0.md  devContextMemo-目录划分-晋升规则-修改检测-深度调研-V1.0.md  devContextMemo-知识更新-冲突检测-冲突解决-深度设计-V1.0.md  devContextMemo-系统架构设计-V1.0.md  devContextMemo-编码索引-V1.0.md  devContextMemo-编码规范-V1.0.md  devContextMemo-项目知识系统-需求文档-V1.0.md
docs/superpowers/: debugging-notes.md  implementation-notes.md
docs/superpowers/plans/: 2026-06-19-auto-capture-pipeline.md  2026-06-20-Phase1-数据源偏离度修复.md
docs/superpowers/specs/: 2026-06-19-Phase1-数据源偏离度调研与修复方案-V1.0.md  2026-06-19-auto-capture-pipeline-design.md  2026-06-19-phase1-data-source-gap-analysis.md  phase10-e2e-tests-and-integration.md  phase2-storage-and-models_25ddb6e1.md  phase3-md-storage-and-atomic-writes.md  phase4-write-pipeline.md  phase5-promotion-pruning-consolidation.md  phase6-conflict-detection-and-calibration.md  phase7-search-and-knowledge-service.md  phase8-mcp-tools-and-injection.md  phase9-cli-commands.md
domain/: knowledge-delivery.yaml  knowledge-lifecycle.yaml  knowledge-quality.yaml
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
src/devcontext/: __init__.py  config.py  main.py
src/devcontext/api/: __init__.py  deps.py
src/devcontext/cli/: __init__.py  app.py  config.py  dream.py  init.py  resource.py  review.py  staging_cli.py  status.py
src/devcontext/core/: __init__.py  calibration.py  conflict.py  health.py  init.py  promotion.py  pruning.py
tests/: README.md  conftest.py
tests/contracts/: step0_receiver.yaml  step1_batcher.yaml  step2a_extractor.yaml  step2b_entity.yaml  step3_validator.yaml  step4_deduplicator.yaml  step5_writer.yaml  step6_consolidator.yaml
tests/e2e/: test_full_pipeline.py  test_real_llm_pipeline.py
tests/fixtures/: __init__.py  db_records.json  knowledge.json  raw_session.json  summary.json
tests/integration/: test_engine_integration.py  test_new_pipeline_e2e.py  test_opencode_adapter.py  test_resource_e2e.py  test_step_contracts.py
tests/module/: test_step0_receiver.py  test_step1_batcher.py  test_step2a_extractor.py  test_step2b_entity_extractor.py  test_step3_validator.py  test_step4_deduplicator.py  test_step5_writer.py  test_step6_consolidator.py
tests/unit/: test_adapter_polling.py  test_atomic.py  test_batch_writer.py  test_calibration.py  test_clean_message.py  test_cli.py  test_conflict.py  test_context_query.py  test_filesystem_adapter.py  test_generic_sqlite_adapter.py  test_hash.py  test_injection.py  test_knowledge_service.py  test_markdown.py  test_mcp_tools.py  test_models.py  test_opencode_incremental.py  test_opencode_sqlite_adapter.py  test_pipeline_service.py  test_polling_collector.py  test_promotion.py  test_pruning.py  test_resource_service.py  test_review_service.py  test_route.py  test_search.py  test_sqlite_store.py  test_state_machine.py
(+55 files in other folders)
