[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devcontext"
version = "0.1.0"
description = "码上记忆（devContextMemo）— 把 AI 编程工具的对话熔炼成结构化项目知识，通过 MCP Tool 按需注入 AI 上下文。"
readme = "README.md"
license = "MIT"
authors = [
    {name = "devContextMemo Team"}
]
keywords = ["mcp", "knowledge-management", "ai-coding", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "fastmcp>=2.0.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.30.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7.0",
]

[project.scripts]
devcontext = "devcontext.cli.app:app"

[project.urls]
Homepage = "https://github.com/devcontextmemo/devcontextmemo"
Documentation = "https://github.com/devcontextmemo/devcontextmemo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devcontext = ["*.yaml", "*.yml"]

# ============================================================
# 以下为设计阶段预留配置
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:.devcontext/test-evidence/coverage",
]
markers = [
    "unit: Unit tests (pure functions, zero dependencies)",
    "module: Module tests (single Step with mocked upstream)",
    "integration: Integration tests (Step-to-Step data contract)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow tests (real LLM calls)",
    "contract: Contract tests (YAML-driven)",
    "l1_gate: L1 fast gate (pre-commit)",
    "l2_gate: L2 standard gate (pre-merge)",
    "l3_gate: L3 strong gate (nightly)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[tool.black]
line-length = 100
target-version = ["py313"]
